--- a/index.html
+++ b/index.html
@@ -207,14 +207,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     
     <!-- Google Analytics 4  -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-6FVTD4ET68"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MD074VZB62"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   // Konfigurasjon av Google Analytics 4 med flerdomene-sporing
-  gtag('config', 'G-6FVTD4ET68', {
+  gtag('config', 'G-MD074VZB62', {
     'send_page_view': true, // Aktiver sending av sidevisninger som standard
     'linker': {
       'domains': ['site1.com', 'site2.com', 'site3.com'] // Erstatt med dine domener
