--- a/index.html
+++ b/index.html
@@ -419,7 +419,40 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             "availability": "https://schema.org/InStock",
             "priceValidUntil": "2065-12-31",  // Prisens gyldighetsdato
             "url": "https://clairvoyancemedium.github.io/Rask-og-palitelig-spadom-via-e-post.github.io/"
-        }
+        },
+        "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "4.8",
+            "reviewCount": "300"
+        },
+        "review": [
+            {
+                "@type": "Review",
+                "author": {
+                    "@type": "Person",
+                    "name": "Ingrid"
+                },
+                "datePublished": "2024-12-25",
+                "reviewBody": "Jeg var skeptisk i begynnelsen, men Frederick overbeviste meg med sin første e-post. Hans presise og detaljerte analyse av mitt kjærlighetsliv og yrkesliv imponerte meg. På mindre enn 5 timer hadde jeg klare svar og nyttige råd for å kunne gå videre. En rask, pålitelig og 100% personlig spådomskonsultasjon via e-post. Jeg anbefaler det til alle som leter etter kvalitets spirituell veiledning!",
+                "reviewRating": {
+                    "@type": "Rating",
+                    "ratingValue": "5"
+                }
+            },
+            {
+                "@type": "Review",
+                "author": {
+                    "@type": "Person",
+                    "name": "Erik"
+                },
+                "datePublished": "2024-12-20",
+                "reviewBody": "Frederick forvandlet mine tvil til sikkerhet gjennom en enestående spådomskonsultasjon via e-post. Hans spådommer om min familiære og yrkesmessige fremtid viste seg å være riktige og fulle av visdom. Med sin erfaring vet han hvordan han skal berolige og veilede med utrolig klarhet. En rimelig, rask, kvalitets og svært effektiv online konsultasjon. Tusen takk Frederick!",
+                "reviewRating": {
+                    "@type": "Rating",
+                    "ratingValue": "5"
+                }
+            }
+        ]
     }
     </script>
 
